tests/ui/rfcs/rfc-2005-default-binding-mode/lit.stderr
error[E0308]: mismatched types
  --> $DIR/lit.rs:7:13
   |
LL |     match &s {
   |           -- this expression has type `&&str`
LL |             "abc" => true,
   |             ^^^^^ expected `&&str`, found `&str`
   |
   = note: expected reference `&&_`
              found reference `&'static _`

error[E0308]: mismatched types
  --> $DIR/lit.rs:16:9
   |
LL |     match &s {
   |           -- this expression has type `&&[u8]`
LL |         b"abc" => true,
   |         ^^^^^^ expected `&&[u8]`, found `&[u8; 3]`
   |
   = note: expected reference `&&[u8]`
              found reference `&'static [u8; 3]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
